versão inicial vendas internet #1

--- a/abcBolinhas.html
+++ b/abcBolinhas.html
@@ -11,5 +11,7 @@
         \\//\\//\\//\//\/\/ipisicing elit. Iste aperiam vitae repudiandae praesentium ipsa minus tenetur atque, error magni eligendi unde non debitis quaerat ullam facere accusamus impedit 
         numquam veniam.
     </p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla rerum sed molestiae animi porro dolorem dignissimos consequuntur quod consectetur, expedita dicta sapiente quis repudiandae perspiciatis quibusdam officia, similique, cum blanditiis. <link rel="stylesheet" href="/formVendaInternet.html"></p>
 </body>
 </html>
