Ajustes dos menus realizado. close #1

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     </p>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla rerum sed molestiae animi porro dolorem dignissimos consequuntur quod consectetur, expedita dicta sapiente quis repudiandae perspiciatis quibusdam officia, similique, cum blanditiis. <link rel="stylesheet" href="/formVendaInternet.html"></p>
+    <link rel="stylesheet" href="/repositorio-teste/Nicolas.html">
 </body>
 </html>
